infrastructure/rook/configs/gateway/httproute-ceph-s3-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-ceph-s3-external
  namespace: rook-ceph
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "s3.rpcu.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: s3-rpcu-vpn
          kind: Backend
          group: gateway.kgateway.dev
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: s3.rpcu.vpn
      timeouts:
        request: "0"
