infrastructure/rook/configs/gateway/httproute-ceph.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-ceph
  namespace: rook-ceph
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "ceph.rpcu.vpn"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-ceph-s3
  namespace: rook-ceph
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
      sectionName: https
  hostnames:
    - "s3.rpcu.vpn"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-rgw-rpcu-store
          port: 80
      timeouts:
        request: "0"
